Update website content

--- a/dbc1.html
+++ b/dbc1.html
@@ -7,7 +7,7 @@
 
 	<h1>This is me: Jessica Tatham</h1>
 	<h3>About Me</h3>
-		<p> I was born in Cape Town, South Africa. I've grown up in the United States. I currently live in Seatlle, WA. </p>
+		<p> I was born in Cape Town, South Africa. I've grown up all over the United States. I currently live in Seatlle, WA. </p>
 
 	<h3>Interests</h3>
 		<p>
@@ -18,16 +18,21 @@
 					<img src = "images/IMG_0731 3.jpg"/>
 				</li> 
 				<li>Books</li>
-					<img src = "imgares/IMG_3197.jpg"/>
+					<img src = "images/IMG_3197.jpg"/>
 			</ul>
 		</p>
 	<h2>Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
+				<a href= ""><img src = ""/></a>
 				<li>Exploring China</li>
+				<img src = ""/>
 				<li>Walking the Camino <em>de</em> Santiago</li>
+				<img src = ""/>
 				<li>Christmas in Iceland</li>
+				<img src = ""/>
 				<li>Gap Year Backpacking trip </li></ol>
+				<img src = ""/>
 		</p>
 	<h4>Bucket List</h4>
 		<p>
@@ -37,10 +42,10 @@
 	<h5>Education</h5>
 		<p>
 			High School: Woodinville High School 2010 </br>
-			Running Start: Cascadia Community College 2010 </br>
-				<strong>Degree: Associates of Integrated Studies</strong>
-			University: University of Idaho 2013 </br>
-				<strong>Degree: Bachelors of Animal and Veterinary Science</strong>
+			Running Start: <a href = "http://www.cascadia.edu">Cascadia Community College 2010</a> 
+				<strong>Degree: Associates of Integrated Studies</strong></br>
+			University: <a href = "http://www.uidaho.edu">University of Idaho 2013</a> 
+				<strong>Degree: Bachelors of Animal and Veterinary Science</strong></br>
 		</p>
 	<h5>Work History</h5>
 		<p>
