--- a/dbc1.html
+++ b/dbc1.html
@@ -7,7 +7,7 @@
 
 	<h1>This is me: Jessica Tatham</h1>
 	<h3>About Me</h3>
-		<p> I was born in Cape Town, South Africa. I've grown up all over the United States. I currently live in Seatlle, WA. </p>
+		<p> I was born in Cape Town, South Africa. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
 	<h3>Interests</h3>
 		<p>
@@ -24,15 +24,15 @@
 	<h2>Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
-				<a href= ""><img src = ""/></a>
+				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg"/></a>
 				<li>Exploring China</li>
-				<img src = ""/>
+				<img src = "images/P1080821.jpg"/>
 				<li>Walking the Camino <em>de</em> Santiago</li>
-				<img src = ""/>
+				<img src = "images/IMG_3608 2.JPG"/>
 				<li>Christmas in Iceland</li>
-				<img src = ""/>
+				<img src = "images/IMG_5421 2.jpg"/>
 				<li>Gap Year Backpacking trip </li></ol>
-				<img src = ""/>
+				<img src = "images/IMG_9923.jpg"/>
 		</p>
 	<h4>Bucket List</h4>
 		<p>
@@ -41,7 +41,7 @@
 
 	<h5>Education</h5>
 		<p>
-			High School: Woodinville High School 2010 </br>
+			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37">Woodinville High School 2010</a> </br>
 			Running Start: <a href = "http://www.cascadia.edu">Cascadia Community College 2010</a> 
 				<strong>Degree: Associates of Integrated Studies</strong></br>
 			University: <a href = "http://www.uidaho.edu">University of Idaho 2013</a> 
