--- a/dbc1.html
+++ b/dbc1.html
@@ -2,22 +2,21 @@
 <html>
 <head>
 	<title>Jessica Tatham</title>
+	<link rel= "stylesheet" type = "text/css" href = "stylesheet/dbc2.css">
 </head>
 <body>
-
 	<h1>This is me: Jessica Tatham</h1>
 	<h3>About Me</h3>
-		<p> I was born in Cape Town, South Africa. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
+		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
 	<h3>Interests</h3>
 		<p>
 			<ul>
 				<li>Travel</li> </br>
 				<img src = "images/IMG_9137 2.JPG"/>
-				<li>Animals
+				<li>Animals</li> </br>
 					<img src = "images/IMG_0731 3.jpg"/>
-				</li> 
-				<li>Books</li>
+				<li>Books</li></br>
 					<img src = "images/IMG_3197.jpg"/>
 			</ul>
 		</p>
@@ -47,10 +46,7 @@
 			University: <a href = "http://www.uidaho.edu">University of Idaho 2013</a> 
 				<strong>Degree: Bachelors of Animal and Veterinary Science</strong></br>
 		</p>
-	<h5>Work History</h5>
-		<p>
-blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah <strong>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</strong> blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
-		</p>
+	
 
 	<h6>Now you know!!!</h6>
 
