fixing link to css

--- a/dbc1.html
+++ b/dbc1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Jessica Tatham</title>
-	<link rel= "stylesheet" type = "text/css" href = "stylesheet/dbc2.css">
+	<link rel= "stylesheet" type = "text/css" href = "dbc2.css">
 </head>
 <body>
 	<h1>This is me: Jessica Tatham</h1>
