--- a/dbc1.html
+++ b/dbc1.html
@@ -13,17 +13,17 @@
 		<p>
 			<ul>
 				<li>Travel</li> </br>
-				<img src = "images/IMG_9137 2.JPG"/>
+				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="42" width="42">
 				<li>Animals</li> </br>
-					<img src = "images/IMG_0731 3.jpg"/>
+					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="42" width="42">
 				<li>Books</li></br>
-					<img src = "images/IMG_3197.jpg"/>
+					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="42" width="42">
 			</ul>
 		</p>
 	<h2>Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
-				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg"/></a>
+				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="42" width="42"></a>
 				<li>Exploring China</li>
 				<img src = "images/P1080821.jpg"/>
 				<li>Walking the Camino <em>de</em> Santiago</li>
