--- a/dbc1.html
+++ b/dbc1.html
@@ -12,26 +12,24 @@
 	<h3>Interests</h3>
 		<p>
 			<ul>
-				<li>Travel</li> </br>
-				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="42" width="42">
-				<li>Animals</li> </br>
-					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="42" width="42">
-				<li>Books</li></br>
-					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="42" width="42">
+				<li>Travel</li>
+				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="75" width="90"></br>
+				<li>Animals</li> 
+					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="75" width="150"></br>
+				<li>Books</li>
+					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="75" width="90"></br>
 			</ul>
 		</p>
 	<h2>Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
-				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="42" width="42"></a>
-				<li>Exploring China</li>
-				<img src = "images/P1080821.jpg"/>
+				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="42" width="42"></a></br>
 				<li>Walking the Camino <em>de</em> Santiago</li>
-				<img src = "images/IMG_3608 2.JPG"/>
+				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="75" width="90"></br>
 				<li>Christmas in Iceland</li>
-				<img src = "images/IMG_5421 2.jpg"/>
+				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="75" width="90"></br>
 				<li>Gap Year Backpacking trip </li></ol>
-				<img src = "images/IMG_9923.jpg"/>
+				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="75" width="90"></br>
 		</p>
 	<h4>Bucket List</h4>
 		<p>
