--- a/dbc1.html
+++ b/dbc1.html
@@ -13,23 +13,24 @@
 		<p>
 			<ul>
 				<li>Travel</li>
-				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="75" width="90"></br>
+				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></br>
 				<li>Animals</li> 
-					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="75" width="150"></br>
+					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="150" width="400"></br>
 				<li>Books</li>
-					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="75" width="90"></br>
+					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></br>
 			</ul>
 		</p>
 	<h2>Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
-				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="42" width="42"></a></br>
+				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="200"></a></br>
 				<li>Walking the Camino <em>de</em> Santiago</li>
-				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="75" width="90"></br>
+				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></br>
 				<li>Christmas in Iceland</li>
-				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="75" width="90"></br>
-				<li>Gap Year Backpacking trip </li></ol>
-				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="75" width="90"></br>
+				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></br>
+				<li>Gap Year Backpacking trip </li>
+				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></br>
+			</ol>
 		</p>
 	<h4>Bucket List</h4>
 		<p>
