Added email link

--- a/dbc1.html
+++ b/dbc1.html
@@ -9,7 +9,7 @@
 	<h3>About Me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
-	<h3>Interests</h3>
+	<h3 class="list">Interests</h3>
 		<p>
 			<ul>
 				<li>Travel</li>
@@ -20,7 +20,7 @@
 					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></br>
 			</ul>
 		</p>
-	<h2>Adventures</h2>
+	<h2 class="list">Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
 				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></br>
@@ -47,7 +47,10 @@
 		</p>
 	
 
-	<h6>Now you know!!!</h6>
+	<h6>Now you know!!!</br>
+		Contact info: <a href = "mailto:jectatham@gmail.com">Email Jessica</a>
+	</h6>
+
 
 </body>
 
