Opening links in a new tab

--- a/dbc1.html
+++ b/dbc1.html
@@ -39,10 +39,10 @@
 
 	<h5>Education</h5>
 		<p>
-			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37">Woodinville High School 2010</a> </br>
-			Running Start: <a href = "http://www.cascadia.edu">Cascadia Community College 2010</a> 
+			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> </br>
+			Running Start: <a href = "http://www.cascadia.edu" target="_blank">Cascadia Community College 2010</a> 
 				<strong>Degree: Associates of Integrated Studies</strong></br>
-			University: <a href = "http://www.uidaho.edu">University of Idaho 2013</a> 
+			University: <a href = "http://www.uidaho.edu" target="_blank">University of Idaho 2013</a> 
 				<strong>Degree: Bachelors of Animal and Veterinary Science</strong></br>
 		</p>
 	
