--- a/dbc1.html
+++ b/dbc1.html
@@ -9,7 +9,9 @@
 	<h3>About Me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
-	<h3 class="list">Interests</h3>
+<div>
+
+	<h3>Interests</h3>
 		<p>
 			<ul>
 				<li>Travel</li>
@@ -20,7 +22,7 @@
 					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></br>
 			</ul>
 		</p>
-	<h2 class="list">Adventures</h2>
+	<h2 class="ordered-list">Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa</li>
 				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></br>
@@ -32,6 +34,7 @@
 				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></br>
 			</ol>
 		</p>
+	</div>
 	<h4>Bucket List</h4>
 		<p>
 			My bucket list is a never ending note on my iphone. It includes, a 3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos. As well as seeing the great migration in the Serengeti and doing a week long yoga retreat in Mexico. 
@@ -45,13 +48,11 @@
 			University: <a href = "http://www.uidaho.edu" target="_blank">University of Idaho 2013</a> 
 				<strong>Degree: Bachelors of Animal and Veterinary Science</strong></br>
 		</p>
-	
-
-	<h6>Now you know!!!</br>
-		Contact info: <a href = "mailto:jectatham@gmail.com">Email Jessica</a>
-	</h6>
-
 
 </body>
+
+<footer> <h6>Now you know!!!</br>
+		Contact info: <a href = "mailto:jectatham@gmail.com">Email Jessica</a>
+	</h6></footer>
 
 </html>
