--- a/dbc1.html
+++ b/dbc1.html
@@ -9,37 +9,37 @@
 	<h3>About Me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
-<div>
+
 
 	<h3>Interests</h3>
 		<p>
 			<ul>
-				<li>Travel</li>
-				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></br>
-				<li>Animals</li> 
-					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="150" width="350"></br>
-				<li>Books</li>
-					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></br>
+				<li>Travel
+				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> </br>
+				<li>Animals
+					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="150" width="350"></li> </br>
+				<li>Books
+					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> </br>
 			</ul>
 		</p>
-	<h2 class="ordered-list">Adventures</h2>
+	<h2>Adventures</h2>
 		<p>
-			<ol> <li>Overland across Africa</li>
-				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></br>
-				<li>Walking the Camino <em>de</em> Santiago</li>
-				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></br>
-				<li>Christmas in Iceland</li>
-				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></br>
-				<li>Gap Year Backpacking trip </li>
-				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></br>
+			<ol> <li>Overland across Africa
+				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> </br>
+				<li>Walking the Camino <em>de</em> Santiago
+				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> </br>
+				<li>Christmas in Iceland
+				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></li> </br>
+				<li>Gap Year Backpacking trip
+				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li></br>
 			</ol>
 		</p>
-	</div>
+	<div>
 	<h4>Bucket List</h4>
 		<p>
 			My bucket list is a never ending note on my iphone. It includes, a 3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos. As well as seeing the great migration in the Serengeti and doing a week long yoga retreat in Mexico. 
 		</p>
-
+</div>
 	<h5>Education</h5>
 		<p>
 			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> </br>
