--- a/dbc1.html
+++ b/dbc1.html
@@ -11,7 +11,7 @@
 
 
 
-	<h3>Interests</h3>
+	<h2>Interests</h2>
 		<p>
 			<ul>
 				<li>Travel
@@ -22,7 +22,7 @@
 					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> </br>
 			</ul>
 		</p>
-	<h2>Adventures</h2>
+	<h2 id= "Adventures">Adventures</h2>
 		<p>
 			<ol> <li>Overland across Africa
 				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> </br>
@@ -34,12 +34,9 @@
 				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li></br>
 			</ol>
 		</p>
-	<div>
-	<h4>Bucket List</h4>
-		<p>
-			My bucket list is a never ending note on my iphone. It includes, a 3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos. As well as seeing the great migration in the Serengeti and doing a week long yoga retreat in Mexico. 
-		</p>
-</div>
+	<div><h4>Bucket List</h4>
+		<p>My bucket list is a never ending note on my iphone. It includes, a 3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos. As well as seeing the great migration in the Serengeti and doing a week long yoga retreat in Mexico. </p></div>
+	
 	<h5>Education</h5>
 		<p>
 			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> </br>
