--- a/dbc1.html
+++ b/dbc1.html
@@ -10,9 +10,8 @@
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
 
-
-	<h2>Interests</h2>
-		<p>
+<ul style = "litst-style-typer:none; display: inline-block;">
+	<li><h2>Interests</h2></li>
 			<ul>
 				<li>Travel
 				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> </br>
@@ -21,9 +20,10 @@
 				<li>Books
 					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> </br>
 			</ul>
-		</p>
-	<h2 id= "Adventures">Adventures</h2>
-		<p>
+		</ul>
+	<ul style = "litst-style-typer:none; display: inline-block;">
+	<li><h2>Adventures</h2></li>
+	
 			<ol> <li>Overland across Africa
 				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> </br>
 				<li>Walking the Camino <em>de</em> Santiago
@@ -33,7 +33,8 @@
 				<li>Gap Year Backpacking trip
 				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li></br>
 			</ol>
-		</p>
+		
+	</ul>
 	<div><h4>Bucket List</h4>
 		<p>My bucket list is a never ending note on my iphone. It includes, a 3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos. As well as seeing the great migration in the Serengeti and doing a week long yoga retreat in Mexico. </p></div>
 	
