--- a/dbc1.html
+++ b/dbc1.html
@@ -14,24 +14,30 @@
 	<li><h2>Interests</h2></li>
 			<ul>
 				<li>Travel
-				<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> </br>
+					<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> </br>
 				<li>Animals
 					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="150" width="350"></li> </br>
 				<li>Books
-					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> </br>
+					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> 
+					</br>
+				<li> Programming!
+					<img src = "images/logo.png" alt = "images/logo.png" height= "150" width="200"></li>
+					</br>
 			</ul>
 		</ul>
 	<ul style = "litst-style-typer:none; display: inline-block;">
-	<li><h2>Adventures</h2></li>
-	
-			<ol> <li>Overland across Africa
-				<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> </br>
+		<li><h2>Adventures</h2></li>
+			<ol> 
+				<li>Overland across Africa
+					<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> 
+						</br>
 				<li>Walking the Camino <em>de</em> Santiago
-				<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> </br>
+					<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> 	</br>
 				<li>Christmas in Iceland
-				<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></li> </br>
+					<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></li> 	</br>
 				<li>Gap Year Backpacking trip
-				<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li></br>
+					<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li>
+						</br>
 			</ol>
 		
 	</ul>
