--- a/dbc1.html
+++ b/dbc1.html
@@ -5,10 +5,9 @@
 	<link rel= "stylesheet" type = "text/css" href = "dbc1.css">
 </head>
 <body>
+	<nav><h4><a href = "dbc2.html">Monkeys!!!</a></h4></nav>
 	<h1><a href = "https://www.facebook.com/JessicaHTatham" class="turn_green">This is me: Jessica Tatham</a></h1>
 
-	<h4><a href = "dbc2.html">Another page!!!</a></h4>
-	
 	<h3>About Me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
