--- a/dbc2.html
+++ b/dbc2.html
@@ -1,12 +1,13 @@
 <DOCTYPE! html>
 <html>
 <head>
+	<title>Jessica Tatham</title>
 <link rel= "stylesheet" type = "text/css" href = "dbc2.css">
 
 </head>
 
-
 <body>
+	<nav><a href= "dbc1.html">HomePage</a></nav>
 <h1> I love monkeys!!!</h1>
 <img src = "images/1417546_10202534691672451_1839100390_o.jpg" alt="images/1417546_10202534691672451_1839100390_o.jpg" height="600" width="400"> 
 </body>
