--- a/dbc1.html
+++ b/dbc1.html
@@ -5,7 +5,7 @@
 	<link rel= "stylesheet" type = "text/css" href = "dbc1.css">
 </head>
 <body>
-	<nav><h4><a href = "dbc2.html">Monkeys!!!</a></h4></nav>
+	<nav><h4><a href = "dbc2.html">Photography!</a></h4></nav>
 	<h1><a href = "https://www.facebook.com/JessicaHTatham" class="turn_green">This is me: Jessica Tatham</a></h1>
 
 	<h3>About Me</h3>
