--- a/dbc2.html
+++ b/dbc2.html
@@ -9,7 +9,7 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
-<img scr = "http://rack.1.mshcdn.com/media/ZgkyMDE0LzAyLzIxLzc3L2ljZWFnZV9zbWFsLjU1MWUxLmdpZgpwCXRodW1iCTg1MHg1OTA-CmUJanBn/03d16a62/b91/iceage_small2.jpg"/>
+<img scr = "http://rack.1.mshcdn.com/media/ZgkyMDE0LzAyLzIxLzc3L2ljZWFnZV9zbWFsLjU1MWUxLmdpZgpwCXRodW1iCTg1MHg1OTA-CmUJanBn/03d16a62/b91/iceage_small2.jpg">
 
 <img src = "images/1417546_10202534691672451_1839100390_o.jpg" alt="images/1417546_10202534691672451_1839100390_o.jpg" height="600" width="400"> 
 </body>
