--- a/dbc2.html
+++ b/dbc2.html
@@ -9,7 +9,7 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
-<img scr = "images/iceage_small2.jpg.gif">
+<img scr = "http://rack.1.mshcdn.com/media/ZgkyMDE0LzAyLzIxLzc3L2ljZWFnZV9zbWFsLjU1MWUxLmdpZgpwCXRodW1iCTg1MHg1OTA-CmUJanBn/03d16a62/b91/iceage_small2.jpg">
 
 </body>
 
