--- a/dbc2.html
+++ b/dbc2.html
@@ -9,7 +9,20 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
-<img scr = "http://rack.1.mshcdn.com/media/ZgkyMDE0LzAyLzIxLzc3L2ljZWFnZV9zbWFsLjU1MWUxLmdpZgpwCXRodW1iCTg1MHg1OTA-CmUJanBn/03d16a62/b91/iceage_small2.jpg"/>
+<img scr = "images/IMG_8102 2.jpg" alt = "images/MG_8102 2.jpg" height= "300px" width = "200px"/>
+<img scr = "images/IMG_8414 2.jpg" alt = "images/IMG_8414 2.jpg" height= "300px" width = "200px"/>
+<img scr = "images/IMG_8417 2.jpg" alt = "images/IMG_8417 2.jpg" height= "300px" width = "200px"/>
+<img scr = "images/IMG_0910 5.jpg" alt = "images/IMG_0910 5.jpg" height= "400px" width = "200px"/>
+<img scr = "images/IMG_8686 2.jpg" alt = "images/IMG_8686 2.jpg" height= "300px" width = "300px"/>
+<img scr = "images/IMG_3168 2.jpg" alt = "images/images/IMG_3168 2.jpg" height= "200px" width = "300px"/>
+<img scr = "images/IMG_3117 2.jpg" alt = "images/IMG_3117 2.jpg" height= "300px" width = "300px"/>
+<img scr = "images/IMG_0810 4.jpg" alt = "images/images/IMG_0810 4.jpg" height= "200px" width = "200px"/>
+<img scr = "images/IMG_7966 2.jpg" alt = "images/images/IMG_7966 2.jpg" height= "400px" width = "400px"/>
+<img scr = "images/IMG_0870 4.jpg" alt = "images/images/IMG_0870 4.jpg" height= "200px" width = "500px"/>
+<img scr = "images/IMG_9796.jpg" alt = "images/IMG_9796.jpg" height= "200px" width = "300px"/>
+<img scr = "images/IMG_3139 2.jpg" alt = "images/images/IMG_3139 2.jpg" height= "200px" width = "300px"/>
+<img scr = "images/IMG_9071 2.jpg" alt = "images/images/IMG_9071 2.jpg" height= "200px" width = "200px"/>
+<img scr = "images/IMG_3149 2.jpg" alt = "images/images/IMG_3149 2.jpg" height= "400px" width = "300x"/>
 
 </body>
 
