trying to get the images to show

--- a/dbc2.html
+++ b/dbc2.html
@@ -9,12 +9,14 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
+	<h1> Around the World </h1>
+
 <img scr = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "300px" width = "200px">
 <img scr = "images/IMG_8414 2.jpg" alt = "images/IMG_8414 2.jpg" height= "300px" width = "200px">
 <img scr = "images/IMG_8417 2.jpg" alt = "images/IMG_8417 2.jpg" height= "300px" width = "200px">
 <img scr = "images/IMG_0910 5.jpg" alt = "images/IMG_0910 5.jpg" height= "200px" width = "400px">
 <img scr = "images/IMG_8686 2.jpg" alt = "images/IMG_8686 2.jpg" height= "300px" width = "300px">
-<img scr = "images/IMG_3168 2.jpg" alt = "images/images/IMG_3168 2.jpg" height= "200px" width = "300px">
+<img scr = "images/IMG_3168 2.jpg" alt = "images/images/IMG_3168 2.jpg" height= "200px"; width = "300px";>
 <img scr = "images/IMG_3117 2.jpg" alt = "images/IMG_3117 2.jpg" height= "300px" width = "300px">
 <img scr = "images/IMG_0810 4.jpg" alt = "images/images/IMG_0810 4.jpg" height= "200px" width = "200px">
 <img scr = "images/IMG_7966 2.jpg" alt = "images/images/IMG_7966 2.jpg" height= "400px" width = "400px">
