--- a/dbc2.html
+++ b/dbc2.html
@@ -16,15 +16,15 @@
 <img src = "images/IMG_8417 2.jpg" alt = "images/IMG_8417 2.jpg" height= "300px" width = "200px">
 <img src = "images/IMG_0910 5.jpg" alt = "images/IMG_0910 5.jpg" height= "200px" width = "400px">
 <img src = "images/IMG_8686 2.jpg" alt = "images/IMG_8686 2.jpg" height= "300px" width = "300px">
-<img src = "images/IMG_3168 2.jpg" alt = "images/images/IMG_3168 2.jpg" height= "200px" width = "300px">
+<img src = "images/IMG_3168 2.jpg" alt = "images/IMG_3168 2.jpg" height= "200px" width = "300px">
 <img src = "images/IMG_3117 2.jpg" alt = "images/IMG_3117 2.jpg" height= "300px" width = "300px">
-<img src = "images/IMG_0810 4.jpg" alt = "images/images/IMG_0810 4.jpg" height= "200px" width = "200px">
-<img src = "images/IMG_7966 2.jpg" alt = "images/images/IMG_7966 2.jpg" height= "400px" width = "400px">
-<img src = "images/IMG_0870 4.jpg" alt = "images/images/IMG_0870 4.jpg" height= "200px" width = "500px">
+<img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "200px" width = "200px">
+<img src = "images/IMG_7966 2.jpg" alt = "images/IMG_7966 2.jpg" height= "400px" width = "400px">
+<img src = "images/IMG_0870 4.jpg" alt = "images/IMG_0870 4.jpg" height= "200px" width = "500px">
 <img src = "images/IMG_9796.jpg" alt = "images/IMG_9796.jpg" height= "200px" width = "300px">
-<img src = "images/IMG_3139 2.jpg" alt = "images/images/IMG_3139 2.jpg" height= "200px" width = "300px">
-<img src = "images/IMG_9071 2.jpg" alt = "images/images/IMG_9071 2.jpg" height= "200px" width = "200px">
-<img src = "images/IMG_3149 2.jpg" alt = "images/images/IMG_3149 2.jpg" height= "400px" width = "300x">
+<img src = "images/IMG_3139 2.jpg" alt = "images/IMG_3139 2.jpg" height= "200px" width = "300px">
+<img src = "images/IMG_9071 2.jpg" alt = "images/IMG_9071 2.jpg" height= "200px" width = "200px">
+<img src = "images/IMG_3149 2.jpg" alt = "images/IMG_3149 2.jpg" height= "400px" width = "300x">
 
 </body>
 
