fixing image code

--- a/dbc2.html
+++ b/dbc2.html
@@ -24,7 +24,7 @@
 <img src = "images/IMG_9796.jpg" alt = "images/IMG_9796.jpg" height= "200px" width = "300px">
 <img src = "images/IMG_3139 2.jpg" alt = "images/IMG_3139 2.jpg" height= "200px" width = "300px">
 <img src = "images/IMG_9071 2.jpg" alt = "images/IMG_9071 2.jpg" height= "200px" width = "200px">
-<img src = "images/IMG_3149 2.jpg" alt = "images/IMG_3149 2.jpg" height= "400px" width = "300x">
+<img src = "images/IMG_3149 2.jpg" alt = "images/IMG_3149 2.jpg" height= "400px" width = "300px">
 
 </body>
 
