changing jpg to JPG for some images

--- a/dbc2.html
+++ b/dbc2.html
@@ -12,19 +12,19 @@
 	<h1> Around the World </h1>
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "300px" width = "200px">
-<img src = "images/IMG_8414 2.jpg" alt = "images/IMG_8414 2.jpg" height= "300px" width = "200px">
-<img src = "images/IMG_8417 2.jpg" alt = "images/IMG_8417 2.jpg" height= "300px" width = "200px">
+<img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "300px" width = "200px">
+<img src = "images/IMG_8417 2.JPG" alt = "images/IMG_8417 2.JPG" height= "300px" width = "200px">
 <img src = "images/IMG_0910 5.jpg" alt = "images/IMG_0910 5.jpg" height= "200px" width = "400px">
-<img src = "images/IMG_8686 2.jpg" alt = "images/IMG_8686 2.jpg" height= "300px" width = "300px">
-<img src = "images/IMG_3168 2.jpg" alt = "images/IMG_3168 2.jpg" height= "200px" width = "300px">
-<img src = "images/IMG_3117 2.jpg" alt = "images/IMG_3117 2.jpg" height= "300px" width = "300px">
+<img src = "images/IMG_8686 2.JPG" alt = "images/IMG_8686 2.JPG" height= "300px" width = "300px">
+<img src = "images/IMG_3168 2.JPG" alt = "images/IMG_3168 2.JPG" height= "200px" width = "300px">
+<img src = "images/IMG_3117 2.JPG" alt = "images/IMG_3117 2.JPG" height= "300px" width = "300px">
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "200px" width = "200px">
-<img src = "images/IMG_7966 2.jpg" alt = "images/IMG_7966 2.jpg" height= "400px" width = "400px">
+<img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 <img src = "images/IMG_0870 4.jpg" alt = "images/IMG_0870 4.jpg" height= "200px" width = "500px">
 <img src = "images/IMG_9796.jpg" alt = "images/IMG_9796.jpg" height= "200px" width = "300px">
 <img src = "images/IMG_3139 2.jpg" alt = "images/IMG_3139 2.jpg" height= "200px" width = "300px">
-<img src = "images/IMG_9071 2.jpg" alt = "images/IMG_9071 2.jpg" height= "200px" width = "200px">
-<img src = "images/IMG_3149 2.jpg" alt = "images/IMG_3149 2.jpg" height= "400px" width = "300px">
+<img src = "images/IMG_9071 2.JPG" alt = "images/IMG_9071 2.JPG" height= "200px" width = "200px">
+<img src = "images/IMG_3149 2.JPG" alt = "images/IMG_3149 2.JPG" height= "400px" width = "300px">
 
 </body>
 
