making header, footer, sidebar, content

--- a/dbc2.html
+++ b/dbc2.html
@@ -10,6 +10,12 @@
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
 	<h1> Around the World </h1>
+<div class = "container">
+	<div id="sidebar"></div>
+	<div id="header"></div>
+	<div id="conent"></div>
+	<div id= "footer"></div>
+</div>
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
 <img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
