--- a/dbc2.html
+++ b/dbc2.html
@@ -11,10 +11,10 @@
 
 	<h1> Around the World </h1>
 <div class = "container">
-	<div id="sidebar"></div>
-	<div id="header"></div>
+	<div id="sidebar">blah blah blah</div>
+	<div id="header">Around the World</div>
 	<div id="conent"></div>
-	<div id= "footer"></div>
+	<div id= "footer">Thanks for visiting my website!</div>
 </div>
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
