--- a/dbc2.html
+++ b/dbc2.html
@@ -9,7 +9,7 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
-	<header><h1> Around the World </h1></header>
+	<div id = "header"><h1> Around the World </h1></div>
 <div class = "container">
 	<div id="sidebar">This is the sidebar</div>
 	<div id="conent"></div>
@@ -22,7 +22,7 @@
 <img src = "images/IMG_8686 2.JPG" alt = "images/IMG_8686 2.JPG" height= "300px" width = "300px">
 <img src = "images/IMG_3168 2.JPG" alt = "images/IMG_3168 2.JPG" height= "200px" width = "250px">
 <img src = "images/IMG_3117 2.JPG" alt = "images/IMG_3117 2.JPG" height= "600px" width = "600px">
-<img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "300px" width = "300px">
+<img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "600px" width = "600px">
 <img src = "images/IMG_0870 4.jpg" alt = "images/IMG_0870 4.jpg" height= "460px" width = "1200px">
 <img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 <img src = "images/IMG_9796.jpg" alt = "images/IMG_9796.jpg" height= "300px" width = "500px">
