--- a/dbc2.html
+++ b/dbc2.html
@@ -9,7 +9,7 @@
 <body>
 	<nav><a href= "dbc1.html">HomePage</a></nav>
 
-	<div id = "header"><h1> Around the World </h1></div>
+	<header><h1> Around the World </h1></header>
 <div class = "container">
 	<div id="sidebar">This is the sidebar</div>
 	<div id="conent"></div>
