--- a/dbc2.html
+++ b/dbc2.html
@@ -11,7 +11,7 @@
 
 	<header><h1> Around the World </h1></header>
 <div class = "container">
-	<div id="sidebar">This is the sidebar</div>
+	<div id="sidebar">Sidebar</div>
 	<div id="conent"></div>
 </div>
 
