--- a/dbc2.html
+++ b/dbc2.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-	<nav><a href= "dbc1.html">HomePage</a></nav>
+	<nav><a href= "DBC1.html">HomePage</a></nav>
 
 	<header><h1> Around the World </h1></header>
+
 <div class = "container">
 	<div id="conent"></div>
 </div>
-
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
 <img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
