--- a/dbc2.html
+++ b/dbc2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<nav><a href= "DBC1.html">HomePage</a></nav>
+	<nav><h4><a href = "dbc1.html">HomePage</a></h4></nav>
 
 	<header><h1> Around the World </h1></header>
 
