--- a/dbc1.html
+++ b/dbc1.html
@@ -44,7 +44,7 @@
 		
 	</ul>
 	<div><h4>Bucket List</h4>
-		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style = "color: white">week long yoga retreat in Mexico</span>. </p></div>
+		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style = "color: black">week long yoga retreat in Mexico</span>. </p></div>
 	
 	<h5>Education</h5>
 		<p>
