caption an image

--- a/dbc2.html
+++ b/dbc2.html
@@ -5,6 +5,7 @@
 <link rel= "stylesheet" type = "text/css" href = "dbc2.css">
 
 </head>
+
 <nav><h4><a href = "dbc1.html">HomePage</a></h4></nav>
 
 <body>
@@ -15,7 +16,7 @@
 	<div id="conent"></div>
 </div>
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
-<img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
+<div id="caption"><img id="image" src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"> <p id="text">Hello World!</p></div>
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
 
 
