--- a/dbc2.html
+++ b/dbc2.html
@@ -13,11 +13,11 @@
 	<header><h1> Around the World </h1></header>
 
 <div class = "container">
-	<div id="content"></div>
+	<div id="conent"></div>
 </div>
-<div id="caption"><img id="image" src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"> <p id="text">Hello World!</p></div>
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
-<img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "450px" width = "450px">
+<div id="caption"><img id="image" src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"> <p id="text">Hello World!</p></div>
+<img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
 
 
 <img src = "images/IMG_0910 5.jpg" alt = "images/IMG_0910 5.jpg" height= "300px" width = "650px">
