--- a/dbc2.html
+++ b/dbc2.html
@@ -15,8 +15,9 @@
 <div class = "container">
 	<div id="conent"></div>
 </div>
+
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
-<div id="caption"><img id="image" src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"> <p id="text">Hello World!</p></div>
+<img id="image" src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
 
 
