--- a/dbc2.html
+++ b/dbc2.html
@@ -6,7 +6,8 @@
 
 </head>
 
-<nav><h4><a href = "dbc1.html">HomePage</a></h4></nav>
+<nav><h4><a href = "index.html">HomePage</a></h4></nav>
+<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 
 <body>
 
