--- a/dbc2.html
+++ b/dbc2.html
@@ -6,13 +6,34 @@
 
 </head>
 
+<div class="ui red vertical demo sidebar menu">
+  <a class="item">
+    <i class="home icon"></i>
+    Home
+  </a>
+  <a class="active item">
+    <i class="heart icon"></i>
+    Current Section
+  </a>
+  <a class="item">
+    <i class="facebook icon"></i>
+    Like us on Facebook
+  </a>
+  <div class="item">
+    <b>More</b>
+    <div class="menu">
+      <a class="item">About</a>
+      <a class="item">Contact Us</a>
+    </div>
+  </div>
+</div>
 
 <body>
 
 
 	<header><h1> Around the World </h1></header>
-	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
+	<aside><nav><h4><a href = "index.html">HomePage</a></h4></nav>
+<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></aside>
 
 <div class = "container">
 	<div id="conent"></div>
@@ -39,7 +60,7 @@
 
 
 </body>
-<div id="sidebar">Sidebar</div>
+<sidebar><div id="sidebar">Sidebar</div></sidebar>
 
 <footer><div id= "footer">Thanks for visiting my website!</div></footer>
 </html>
