--- a/dbc2.html
+++ b/dbc2.html
@@ -11,9 +11,9 @@
 
 	<header><h1> Around the World </h1></header>
 	<aside>
-		<sidebar><div id="sidebar"><strong>Sidebar</strong></div></sidebar>
+		<sidebar><div id="sidebar"><strong>Sidebar</strong></div>
 		<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-		<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
+		<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></sidebar>
 	</aside>
 
 <div class = "container">
