--- a/dbc2.html
+++ b/dbc2.html
@@ -21,9 +21,8 @@
 </div>
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
-<div class="figure">
+<div class="figure"><p>Hello World!</p>
   <p><img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"></p>
-  <p>Hello World!</p>
 </div>
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
 
