--- a/dbc2.html
+++ b/dbc2.html
@@ -16,14 +16,16 @@
 		<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></sidebar>
 	</aside>
 
-<div class = "container">
+
 	<div id="conent"></div>
-</div>
+
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
-<div class="figure"><p>Hello World!</p>
-  <p><img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"></p>
-</div>
+
+<img><div class="figure"><p>Hello World!</p>
+  <img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
+	</div></img>
+
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
 
 
