--- a/dbc2.html
+++ b/dbc2.html
@@ -38,7 +38,7 @@
 <img src = "images/IMG_9071 2.JPG" alt = "images/IMG_9071 2.JPG" height= "400px" width = "400px">
 <img src = "images/IMG_3139 2.jpg" alt = "images/IMG_3139 2.jpg" height= "400px" width = "600px">
 <img src = "images/IMG_3149 2.JPG" alt = "images/IMG_3149 2.JPG" height= "400px" width = "300px">
-<img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
+<div class="figure"><p><img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px"></p><p>Hello World!></p></div>
 
 
 </body>
