--- a/dbc2.html
+++ b/dbc2.html
@@ -21,6 +21,7 @@
 
 
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
+<div class="figure"><p>Hello World!</p></div>
 <img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px">
 
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "350px" width = "350px">
@@ -38,7 +39,7 @@
 <img src = "images/IMG_9071 2.JPG" alt = "images/IMG_9071 2.JPG" height= "400px" width = "400px">
 <img src = "images/IMG_3139 2.jpg" alt = "images/IMG_3139 2.jpg" height= "400px" width = "600px">
 <img src = "images/IMG_3149 2.JPG" alt = "images/IMG_3149 2.JPG" height= "400px" width = "300px">
-<div class="figure"><img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px"><p>Hello World!</p></div>
+<img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 
 
 </body>
