--- a/dbc2.html
+++ b/dbc2.html
@@ -10,6 +10,8 @@
 
 
 	<header><h1> Around the World </h1></header>
+	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
+	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 	<aside>
 		<sidebar><div id="sidebar"><strong>Sidebar</strong></div>
 		<nav><h4><a href = "index.html">HomePage</a></h4></nav>
