--- a/dbc2.html
+++ b/dbc2.html
@@ -14,8 +14,7 @@
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 	<aside>
 		<sidebar><div id="sidebar"><strong>Sidebar</strong></div>
-		<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-		<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></sidebar>
+		</sidebar>
 	</aside>
 
 
