--- a/dbc2.html
+++ b/dbc2.html
@@ -12,10 +12,9 @@
 	<header><h1> Around the World </h1></header>
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
-	<aside>
-		<sidebar><div id="sidebar"><strong>Sidebar</strong></div>
-		</sidebar>
-	</aside>
+	
+<div id="sidebar"><strong>Sidebar</strong></div>
+	
 
 
 	<div id="conent"></div>
