--- a/dbc2.html
+++ b/dbc2.html
@@ -15,7 +15,7 @@
 	
 <div id="sidebar"><strong>Sidebar</strong></div>
 	
-<div id="content"></div>
+<div id="content">This is my content</div>
 
 
 
