--- a/dbc2.html
+++ b/dbc2.html
@@ -12,7 +12,7 @@
 	<header><h1> Around the World </h1></header>
 	
 <div id="sidebar"><strong>Sidebar</strong>
-	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
+	<nav><h4><a href = "index.html">HomePage</a></h4></nav></br>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 </div>
 
