--- a/dbc2.html
+++ b/dbc2.html
@@ -13,7 +13,9 @@
 	
 <div id="sidebar"><strong>Sidebar</strong>
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav></br>
-	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
+	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></br>
+	<nav><h4> <a href = "mailto:jectatham@gmail.com">Email Jessica</a></h4></nav>
+
 </div>
 
 
