--- a/dbc2.html
+++ b/dbc2.html
@@ -14,7 +14,7 @@
 <div id="sidebar"><strong>Sidebar</strong>
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav></br>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></br>
-	<nav><h4> <a href = "mailto:jectatham@gmail.com"?subject="Greetings from your website!">Email Jessica</a></h4></nav>
+	<nav><h4> <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!">Email Jessica</a></h4></nav>
 
 </div>
 
