float:center title on dbc1

--- a/dbc1.html
+++ b/dbc1.html
@@ -59,7 +59,7 @@
 </body>
 
 <footer> <h6>Now you know!!!</br>
-		Contact info: <a href = "mailto:jectatham@gmail.com">Email Jessica</a>
+		Contact info: <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a>
 	</h6></footer>
 
 </html>
