trying out ChromeTools

--- a/dbc1.html
+++ b/dbc1.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
-<html>
-<head>
+<!-- saved from url=(0040)http://jessicatatham.github.io/dbc1.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Jessica Tatham</title>
-	<link rel= "stylesheet" type = "text/css" href = "dbc1.css">
+	<link rel="stylesheet" type="text/css" href="./dbc1_files/dbc1.css">
 </head>
 <body>
-	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-	<nav><h4><a href = "dbc2.html">Photography!</a></h4></nav>
-	<h1><a href = "https://www.facebook.com/JessicaHTatham" class="turn_green">This is me: Jessica Tatham</a></h1>
+	<nav><h4><a href="http://jessicatatham.github.io/index.html">HomePage</a></h4></nav>
+	<nav><h4><a href="http://jessicatatham.github.io/dbc2.html">Photography!</a></h4></nav>
+	<h1><a href="https://www.facebook.com/JessicaHTatham" class="turn_green">This is me: Jessica Tatham</a></h1>
 
-	<h3>About Me</h3>
+	<h3>A little bit about me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
 
 
-<ul style = "litst-style-typer:none; display: inline-block;">
+<ul style="litst-style-typer:none; display: inline-block;">
 	<li><h2>Interests</h2></li>
 			<ul>
 				<li>Travel
-					<img src = "images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> </br>
+					<img src="./dbc1_files/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> <br>
 				<li>Animals
-					<img src = "images/IMG_0731 3.jpg"alt="images/IMG_0731 3.JPG" height="150" width="350"></li> </br>
+					<img src="./dbc1_files/IMG_0731 3.jpg" alt="images/IMG_0731 3.JPG" height="150" width="350"></li> <br>
 				<li>Books
-					<img src = "images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> 
-					</br>
+					<img src="./dbc1_files/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> 
+					<br>
 				<li> Programming!
-					<img src = "images/logo.png" alt = "images/logo.png" height= "150" width="300"></li>
-					</br>
+					<img src="./dbc1_files/logo.png" alt="images/logo.png" height="150" width="300"></li>
+					<br>
 			</ul>
 		</ul>
-	<ul style = "litst-style-typer:none; display: inline-block;">
+	<ul style="litst-style-typer:none; display: inline-block;">
 		<li><h2>Adventures</h2></li>
 			<ol> 
 				<li>Overland across Africa
-					<a href= "http://www.overlandafrica.com"><img src = "images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> 
-						</br>
+					<a href="http://www.overlandafrica.com/"><img src="./dbc1_files/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> 
+						<br>
 				<li>Walking the Camino <em>de</em> Santiago
-					<img src = "images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> 	</br>
+					<img src="./dbc1_files/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> 	<br>
 				<li>Christmas in Iceland
-					<img src = "images/IMG_5421 2.jpg"alt="images/IMG_5421 2.JPG" height="150" width="170"></li> 	</br>
+					<img src="./dbc1_files/IMG_5421 2.jpg" alt="images/IMG_5421 2.JPG" height="150" width="170"></li> 	<br>
 				<li>Gap Year Backpacking trip
-					<img src = "images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li>
-						</br>
+					<img src="./dbc1_files/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li>
+						<br>
 			</ol>
 		
 	</ul>
 	<div><h4>Bucket List</h4>
-		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style = "color: green">week long yoga retreat in Mexico</span>. </p></div>
+		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style="color: green">week long yoga retreat in Mexico</span>. </p></div>
 	
 	<h5>Education</h5>
 		<p>
-			High School: <a href = "http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> </br>
-			Running Start: <a href = "http://www.cascadia.edu" target="_blank">Cascadia Community College 2010</a> 
-				<strong>Degree: Associates of Integrated Studies</strong></br>
-			University: <a href = "http://www.uidaho.edu" target="_blank">University of Idaho 2013</a> 
-				<strong>Degree: Bachelors of Animal and Veterinary Science</strong></br>
+			High School: <a href="http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> <br>
+			Running Start: <a href="http://www.cascadia.edu/" target="_blank">Cascadia Community College 2010</a> 
+				<strong>Degree: Associates of Integrated Studies</strong><br>
+			University: <a href="http://www.uidaho.edu/" target="_blank">University of Idaho 2013</a> 
+				<strong>Degree: Bachelors of Animal and Veterinary Science</strong><br>
 		</p>
 
-</body>
 
-<footer> <h6>Now you know!!!</br>
-		Contact info: <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a>
+
+<footer> <h6>Now you know!!!<br>
+		Contact info: <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a>
 	</h6></footer>
 
-</html>
+</body></html>
