adding reset.css to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+</head>
 <body>
+
 	<a href = "dbc1.html">Click here!</a>
 </body>
 </html>
