--- a/dbc1.html
+++ b/dbc1.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0040)http://jessicatatham.github.io/dbc1.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Jessica Tatham</title>
-	<link rel="stylesheet" type="text/css" href="./dbc1_files/dbc1.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
 	<nav><h4><a href="http://jessicatatham.github.io/index.html">HomePage</a></h4></nav>
