--- a/dbc2.html
+++ b/dbc2.html
@@ -15,6 +15,7 @@
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav></br>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></br>
 	<nav><h4> <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a></h4></nav>
+	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 
 </div>
 
