--- a/dbc1.html
+++ b/dbc1.html
@@ -5,16 +5,18 @@
 	<link rel="stylesheet" type="text/css" href="./dbc1_files/dbc1.css">
 </head>
 <body>
+</div>
+	<h1>This is me: Jessica Tatham</div></h1>
 
-<div id="sidebar"><strong>Sidebar</strong>
+<div id="sidebar"><strong>Website Navigation</strong>
+<div class="turn_green">
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 	<nav><h4> <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a></h4></nav>
 	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
-
 </div>
-	<h1><div class="turn_green">This is me: Jessica Tatham</div></h1>
+</div>
 
 	<h3>A little bit about me</h3>
 		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
