--- a/dbc1.html
+++ b/dbc1.html
@@ -17,6 +17,9 @@
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
 </nav></nav></nav></nav></span>
 </div>
+
+<div id="me"><img src = "images/IMG_9554 2.JPG"></div>
+
 <br>
 <br><br>
 	<h3>A little bit about me</h3>
