--- a/dbc1.html
+++ b/dbc1.html
@@ -18,7 +18,7 @@
 </nav></nav></nav></nav></span>
 </div>
 
-
+<section id="me"><img src = "1475781_10202713240416058_1929728279_n.jpg"></section>
 
 <br>
 <br><br>
