--- a/dbc1.html
+++ b/dbc1.html
@@ -9,13 +9,13 @@
 	<h1>This is me: Jessica Tatham</h1>
 
 <div id="sidebar"><strong>Website Navigation</strong>
-<span class="turn_green">
+<div class="turn_green">
 	<nav><h4><a href="http://jessicatatham.github.io/index.html">HomePage</a></h4></nav>
 	<nav><h4><a href="http://jessicatatham.github.io/dbc2.html">Photography!</a></h4></nav>
 	<nav><h4> <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></h4></nav>
 	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
-</nav></nav></nav></nav></span>
+</div>
 </div>
 
 <section id="me"><img src = "1475781_10202713240416058_1929728279_n.jpg"></section>
