--- a/dbc1.html
+++ b/dbc1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0040)http://jessicatatham.github.io/dbc1.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
 	<title>Jessica Tatham</title>
 	<link rel="stylesheet" type="text/css" href="dbc1.css">
 </head>
