putting images back in

--- a/dbc1.html
+++ b/dbc1.html
@@ -30,14 +30,14 @@
 	<li><h2>Interests</h2></li>
 			<ul>
 				<li>Travel
-					<img src="./dbc1_files/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> <br>
+					<img src="images/IMG_9137 2.JPG" alt="images/IMG_9137 2.JPG" height="150" width="180"></li> <br>
 				<li>Animals
-					<img src="./dbc1_files/IMG_0731 3.jpg" alt="images/IMG_0731 3.JPG" height="150" width="350"></li> <br>
+					<img src="images/IMG_0731 3.jpg" alt="images/IMG_0731 3.JPG" height="150" width="350"></li> <br>
 				<li>Books
-					<img src="./dbc1_files/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> 
+					<img src="images/IMG_3197.jpg" alt="images/IMG_3197.JPG" height="150" width="170"></li> 
 					<br>
 				<li> Programming!
-					<img src="./dbc1_files/logo.png" alt="images/logo.png" height="150" width="300"></li>
+					<img src="images/logo.png" alt="images/logo.png" height="150" width="300"></li>
 					<br>
 			</ul>
 		</ul>
@@ -45,14 +45,14 @@
 		<li><h2>Adventures</h2></li>
 			<ol> 
 				<li>Overland across Africa
-					<a href="http://www.overlandafrica.com/"><img src="./dbc1_files/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> 
+					<a href="http://www.overlandafrica.com/"><img src="images/IMG_0721 4.jpg" alt="images/IMG_0721 4.JPG" height="150" width="240"></a></li> 
 						<br>
 				<li>Walking the Camino <em>de</em> Santiago
-					<img src="./dbc1_files/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> 	<br>
+					<img src="images/IMG_3608 2.JPG" alt="images/IMG_3608 2.JPG" height="150" width="180"></li> 	<br>
 				<li>Christmas in Iceland
-					<img src="./dbc1_files/IMG_5421 2.jpg" alt="images/IMG_5421 2.JPG" height="150" width="170"></li> 	<br>
+					<img src="images/IMG_5421 2.jpg" alt="images/IMG_5421 2.JPG" height="150" width="170"></li> 	<br>
 				<li>Gap Year Backpacking trip
-					<img src="./dbc1_files/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li>
+					<img src="images/IMG_9923.jpg" alt="images/IMG_9923.JPG" height="150" width="180"></li>
 						<br>
 			</ol>
 		
