--- a/dbc1.html
+++ b/dbc1.html
@@ -18,7 +18,7 @@
 </div>
 </div>
 
-<img src = "images/1475781_10202713240416058_1929728279_n.jpg">
+<div id="me"><img src = "images/1475781_10202713240416058_1929728279_n.jpg"></div>
 
 <br>
 <br><br>
