--- a/dbc1.html
+++ b/dbc1.html
@@ -18,7 +18,7 @@
 </div>
 </div>
 
-<div id="me"><img src = "images/1475781_10202713240416058_1929728279_n.jpg"></div>
+<div id="me"><img src = "images/1475781_10202713240416058_1929728279_n.jpg" alt = "images/1475781_10202713240416058_1929728279_n.jpg" height = "250" width = "300"></div>
 
 <br>
 <br><br>
