--- a/dbc2.html
+++ b/dbc2.html
@@ -11,7 +11,7 @@
 
 	<header><h1> Around the World </h1></header>
 	
-<span><div id="sidebar"><strong>Website Navigation</strong>
+<div id="sidebar"><strong>Website Navigation</strong>
 
 	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
 	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></br>
@@ -19,7 +19,7 @@
 	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
 </div>
-</span>
+
 
 
 <div class="figure"><p>Hello World!</p>
