--- a/dbc2.html
+++ b/dbc2.html
@@ -13,8 +13,8 @@
 	
 <div id="sidebar"><strong>Website Navigation</strong>
 
-	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav></br>
+	<nav><h4><a href = "index.html">HomePage</a></h4></nav></br>
+	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
 	<nav><h4> <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a></h4></nav>
 	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
