--- a/dbc1.html
+++ b/dbc1.html
@@ -12,6 +12,7 @@
 <a class="turn_green">
 	<nav><h4><a href="index.html">HomePage</a></h4></nav>
 	<nav><h4><a href="dbc2.html">Photography!</a></h4></nav>
+	<nav><h4><a href="#bucket-list">Bucket List</a></h4></nav>
 	<nav><h4> <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></h4></nav>
 	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
 	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
@@ -57,9 +58,10 @@
 			</ol>
 		
 	</ul>
+	<section id = "bucket-list">
 	<div><h4>Bucket List</h4>
 		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style="color: green">week long yoga retreat in Mexico</span>. </p></div>
-	
+	</section>
 	<h5>Education</h5>
 		<p>
 			High School: <a href="http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> <br>
