making Favorite websites html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="reset.css">
+
 </head>
 <body>
 
-	<a href = "dbc1.html">Click here!</a>
+	<a href = "dbc1.html">Jessica Tatham!</a>
+	<a href = "favorite_websites.html">My Favorite Websites!</a>
+
 </body>
 </html>
