linking css to favorite website html

--- a/favorite_websites.html
+++ b/favorite_websites.html
@@ -4,7 +4,7 @@
 	<title>Favorite websites</title>
 </head>
 <body>
-	<link rel="stylesheet" type="text/css" href="favorite_websites.css">
+	<link rel="stylesheet" type="text/css" href="favorite_website.css">
 
 <h1>My Favorite Websites</h1>
 <ul>
@@ -12,7 +12,7 @@
 		<p></p>
 	<li><a href = "https://www.fanfiction.net">Fanfiction</a></li>
 		<p></p>
-	<li><a href = "http://www.amazon.com">Amazon</a>/li>
+	<li><a href = "http://www.amazon.com">Amazon</a></li>
 		<p></p>
 </ul>
 </body>
