add content to favorite websites

--- a/favorite_websites.html
+++ b/favorite_websites.html
@@ -9,7 +9,7 @@
 <h1>My Favorite Websites</h1>
 <ul>
 	<li><a href = "http://www.pinterest.com">Pinterest</a></li>
-		<p></p>
+		<p>Pinterest has to be my favorite way to procrastinate. It is a website filled with 'do it yourself' projects, clothes, and inspiration. The website is very clean cut with sharp lines and eye pleasing colors. Words to describe this webpage visually would be clean, nonclutered, elegant, light, and colorful. This website is a place for women (or men) to come to, to get inspiration for anything from clothes, to hair, to home decor. It is definitely more of a fun yet practical website, and the visual design matches the purpose of the website extremely well. Not only do I love how much time I can waste on this website, but I love the design, layout, and ease of use.</p></br>
 	<li><a href = "https://www.fanfiction.net">Fanfiction</a></li>
 		<p></p>
 	<li><a href = "http://www.amazon.com">Amazon</a></li>
